fix: 비교보기 아이콘 z-index 오류 수정

--- a/resources/css/comparison-map.css
+++ b/resources/css/comparison-map.css
@@ -1,6 +1,6 @@
 .comparisonMap {display:grid;grid-template-columns:1fr auto 1fr;width:100%;height:100%; /* transition:grid-template-columns 0.05s linear; */}
-.comparisonMap-map {width:100%;height:100%;position:relative;z-index:0;overflow:hidden;}
-.comparisonMap-handle {width:1px;height:100%;background-color:#000;cursor:ew-resize;position:relative;z-index:1;outline:1px solid rgba(255,255,255,.3)}
+.comparisonMap-map {width:100%;height:100%;position:relative;z-index:1;overflow:hidden;}
+.comparisonMap-handle {width:1px;height:100%;background-color:#000;cursor:ew-resize;position:relative;z-index:2;outline:1px solid rgba(255,255,255,.3)}
 .comparisonMap-handle-btn:hover {background-color:#006DE6;}
 .comparisonMap-handle-btn:active {background-color:#002249;}
 .comparisonMap-handle-btn {width:4.2rem;height:4.2rem;background-color:#0475F4;border:.3rem solid #FFF;border-radius:50%;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);cursor:pointer;background-image:url("../images/icon/icon-aspect-link.svg");background-size:2rem 2rem;background-position:50% 50%;background-repeat:no-repeat;}
